--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "gun": "^0.2019.726",
+    "gun-server": "^1.0.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "localstorage": "^1.0.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -36,6 +39,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-frame-component": "^4.0.0",
+    "react-router-dom": "^5.0.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
