--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,23 @@
 {
   "short_name": "Humane",
   "name": "Humane",
-  "version": "1.0",
+  "version": "0.5",
   "manifest_version": 2,
   "background": {
     "scripts": ["app/background.js"]
   },
-  "browser_action": {},
+  "permissions":[
+    "tabs"
+  ],
+  "browser_action": {
+    "default_popup": "index.html"
+  },
   "content_scripts" : [
     {
       "matches": [ "<all_urls>" ],
       "css": ["/static/css/app.css"],
       "js": ["/static/js/content.js"]
     }
-  ],
-  "chrome_url_overrides" : {
-    "newtab": "index.html"
-  },
-  "permissions":[
-    "tabs",
-    "history"
   ],
   "web_accessible_resources":[
     "/static/css/content.css"
