--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,9 @@
   "background": {
     "scripts": ["app/background.js"]
   },
-  "browser_action": {},
+  "browser_action": {
+    "default_popup": "index.html"
+  },
   "content_scripts" : [
     {
       "matches": [ "<all_urls>" ],
