--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-frame-component": "^4.0.0",
+    "react-ga": "^2.6.0",
     "react-router-dom": "^5.0.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
