--- a/public/manifest.json
+++ b/public/manifest.json
@@ -26,5 +26,5 @@
   "web_accessible_resources":[
     "/static/css/content.css"
   ],
-  "content_security_policy": "script-src 'self' 'sha256-GgRxrVOKNdB4LrRsVPDSbzvfdV4UqglmviH9GoBJ5jk='; object-src 'self'"
+  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'"
 }
