--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,14 @@
 {
-  "short_name": "Humane",
-  "name": "Humane",
+  "short_name": "Actions",
+  "name": "Actions",
   "version": "1.0",
   "manifest_version": 2,
   "background": {
     "scripts": ["app/background.js"]
   },
   "browser_action": {
-    "default_popup": "index.html"
+    "default_popup": "index.html",
+    "default_icon": "icon32.png"
   },
   "content_scripts" : [
     {
@@ -17,8 +18,7 @@
     }
   ],
   "permissions":[
-    "tabs",
-    "history"
+    "tabs"
   ],
   "web_accessible_resources":[
     "/static/css/content.css"
