--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "Actions",
   "name": "Actions",
+  "description": "Keep track of what you're doing",
   "version": "1.0",
   "manifest_version": 2,
   "background": {
@@ -22,6 +23,5 @@
   ],
   "web_accessible_resources":[
     "/static/css/content.css"
-  ],
-  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'"
+  ]
 }
